--- a/src/config.json
+++ b/src/config.json
@@ -1,3 +1,3 @@
 {
-  "SERVER_URL": "https://inf-385-t-client-79joyeghb-vigneshs-projects-a43aa152.vercel.app/"
+  "SERVER_URL": "https://inf-385-t-server-jet.vercel.app/"
 }
